added launch screen

--- a/Consolidation11/Base.lproj/LaunchScreen.storyboard
+++ b/Consolidation11/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,9 +12,53 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BlueBack" translatesAutoresizingMaskIntoConstraints="NO" id="ewW-eZ-ISL">
+                                <rect key="frame" x="0.0" y="292" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="3L8-xS-03K"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RedBack" translatesAutoresizingMaskIntoConstraints="NO" id="QO5-Xl-heS">
+                                <rect key="frame" x="0.0" y="476" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="eb0-aw-4a6"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GreenBack" translatesAutoresizingMaskIntoConstraints="NO" id="B5r-lU-ZJG">
+                                <rect key="frame" x="174" y="476" width="240" height="128"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YellowBack" translatesAutoresizingMaskIntoConstraints="NO" id="dxA-U2-96N">
+                                <rect key="frame" x="174" y="292" width="240" height="128"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="© Matt Free 2020" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sk6-qK-q0l">
+                                <rect key="frame" x="103" y="823.5" width="208.5" height="38.5"/>
+                                <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dxA-U2-96N" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9BI-tS-LGy"/>
+                            <constraint firstItem="B5r-lU-ZJG" firstAttribute="centerY" secondItem="QO5-Xl-heS" secondAttribute="centerY" id="G4M-h5-xgT"/>
+                            <constraint firstItem="QO5-Xl-heS" firstAttribute="top" secondItem="B5r-lU-ZJG" secondAttribute="top" id="MFZ-sD-xlt"/>
+                            <constraint firstItem="QO5-Xl-heS" firstAttribute="top" secondItem="dxA-U2-96N" secondAttribute="bottom" constant="56" id="Me5-MB-RqM"/>
+                            <constraint firstItem="ewW-eZ-ISL" firstAttribute="top" secondItem="dxA-U2-96N" secondAttribute="top" id="RxN-KV-J6A"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Sk6-qK-q0l" secondAttribute="bottom" id="Trh-3p-wKR"/>
+                            <constraint firstItem="Sk6-qK-q0l" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="VUg-Ee-Sh8"/>
+                            <constraint firstItem="dxA-U2-96N" firstAttribute="centerY" secondItem="ewW-eZ-ISL" secondAttribute="centerY" id="Y8D-3T-F5Q"/>
+                            <constraint firstItem="ewW-eZ-ISL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="248" id="bGc-eW-qZf"/>
+                            <constraint firstItem="ewW-eZ-ISL" firstAttribute="leading" secondItem="QO5-Xl-heS" secondAttribute="leading" id="ccf-LV-YVb"/>
+                            <constraint firstItem="B5r-lU-ZJG" firstAttribute="leading" secondItem="QO5-Xl-heS" secondAttribute="trailing" constant="-66" id="fhr-9l-G0D"/>
+                            <constraint firstItem="dxA-U2-96N" firstAttribute="leading" secondItem="ewW-eZ-ISL" secondAttribute="trailing" constant="-66" id="g17-1y-1vN"/>
+                            <constraint firstItem="dxA-U2-96N" firstAttribute="leading" secondItem="B5r-lU-ZJG" secondAttribute="leading" id="hkp-3C-ddH"/>
+                            <constraint firstItem="dxA-U2-96N" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="174" id="odT-Ik-0bS"/>
+                            <constraint firstItem="ewW-eZ-ISL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pUI-wf-fHN"/>
+                            <constraint firstItem="dxA-U2-96N" firstAttribute="trailing" secondItem="B5r-lU-ZJG" secondAttribute="trailing" id="t3c-iW-Qe3"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -22,4 +67,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="BlueBack" width="69" height="100"/>
+        <image name="GreenBack" width="69" height="100"/>
+        <image name="RedBack" width="69" height="100"/>
+        <image name="YellowBack" width="69" height="100"/>
+    </resources>
 </document>
